Fix spacing on showcase block in publications landing [PUB-372]

--- a/frontend/scss/molecules/_m-showcase.scss
+++ b/frontend/scss/molecules/_m-showcase.scss
@@ -180,7 +180,11 @@
 
         .showcase-title {
             font-size: 28px;
-            margin-top: 18px !important;
+            margin-top: 15px !important;
+
+            @include breakpoint('small') {
+                margin-top: 38px !important;
+            }
         }
 
         .showcase-description {
@@ -190,8 +194,12 @@
         .m-showcase-wrapper {
             flex-direction: row-reverse;
 
+            .m-showcase-block__text-wrapper {
+                padding-top: 0;
+            }
+
             .showcase-header {
-                flex-basis: 100%;
+                flex-basis: auto;
                 order: -1;
                 color: $color__black--60;
                 font-size: 13px;
@@ -200,7 +208,6 @@
                 letter-spacing: 1px;
                 text-transform: uppercase;
                 position: relative;
-                top: 50px;
 
                 @include breakpoint('medium-') {
                     margin-top: 0;
@@ -209,10 +216,18 @@
                 @include breakpoint('small') {
                     top: 25px;
                 }
+            }
 
-                @include breakpoint('xsmall') {
-                    top: 25px;
-                }
+            .m-showcase-media {
+              margin-top: 0px;
+
+              @include breakpoint('small') {
+                margin-top: 27px;
+              }
+            }
+
+            .showcase-description {
+              margin-top: 0;
             }
 
             @include breakpoint('xsmall') {
@@ -220,7 +235,7 @@
 
                 .showcase-header {
                     flex-basis: fit-content;
-                    order: 1;
+                    order: 0;
                 }
 
 
